fix(live-doc): moves octocat link to top. Removes stackOverflow

--- a/docs/css/_documentation.sass
+++ b/docs/css/_documentation.sass
@@ -41,26 +41,6 @@
   margin-top: 14px
   .version
     margin: 0
-  .list-doc-links
-    color: #eee
-    padding: 0
-    width: 100%
-    li
-      font-size: 18px
-      margin: auto
-      .fa
-        width: 30px
-      span
-        font-size: 14px
-        color: black
-        &:hover
-          color: $brand-primary
-          text-decoration: none
-    .doc-footer-github a
-      color: black
-    .doc-footer-stackoverflow a
-      color: #F89A00
-
 
 // Main Content
 
